# aois

./: CMakeLists.txt  bcd2421.h  binary_operations.h  ieee754.h  test_runner.cpp
Lab2/: Makefile  main.cpp
Lab2/src/: Analyzer.cpp  Analyzer.h  BooleanDerivative.cpp  BooleanDerivative.h  CanonicalForms.cpp  CanonicalForms.h  ExpressionParser.cpp  ExpressionParser.h  KarnaughMap.cpp  KarnaughMap.h  Minimization.cpp  Minimization.h  PostClasses.cpp  PostClasses.h  ReportBuilder.cpp  ReportBuilder.h  TruthTable.cpp  TruthTable.h  ZhegalkinPolynomial.cpp  ZhegalkinPolynomial.h
Lab2/tests/: TestRunner.h  test_all.cpp  test_canonical_forms.cpp  test_integration.cpp  test_minimization.cpp  test_post_classes.cpp  test_truth_table.cpp  test_zhegalkin.cpp
lab1/: bcd2421.cpp  binary_operations.cpp  consts.h  ieee754.cpp  main.cpp  test_runner_extended.cpp
lab4/: DoubleHashTable.py  HashCell.py  Utils.py  main.py
lab4/tests/: conftest.py  test_lab4.py
